Search::Bar: Preserve cursor position

Prior to this commit editing the search term would sometimes change the
cursor position. This commit makes sure the cursor position does not
move by itself.

BUG: 507272